[package]
name = "tracing-actix"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
repository = "https://github.com/zenria/tracing-actix"
description = "Allow tracing actor futures in actix"
keywords=["logging", "tracing", "actix"]
exclude = [
    "*.iml",
]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
actix="0.11"
futures="0.3"
pin-project-lite="0.2"
